finish most codes for p2 and p3

--- a/p8105_hw3_mc5503.md
+++ b/p8105_hw3_mc5503.md
@@ -184,6 +184,64 @@ Cream is longer.
 
 # Problem 2
 
+## data cleaning
+
 ``` r
 data("brfss_smart2010")
+
+ps_clean=
+  brfss_smart2010|>
+  janitor::clean_names()|>
+  filter(topic=='Overall Health')|>
+  filter(response %in% c("Excellent","Very good","Good","Fair","Poor"))|>
+  mutate(response= forcats::fct_relevel(response, c("Poor", "Fair", "Good","Very good","Excellent")))
 ```
+
+## states observed at 7 or more locations
+
+``` r
+ps_clean|>
+  filter(year=='2002')|>
+  group_by(locationabbr)|>
+  summarize(n_days=n_distinct(locationdesc))|>
+  filter(n_days>6)|>
+  knitr::kable()
+```
+
+| locationabbr | n_days |
+|:-------------|-------:|
+| CT           |      7 |
+| FL           |      7 |
+| MA           |      8 |
+| NC           |      7 |
+| NJ           |      8 |
+| PA           |     10 |
+
+``` r
+ps_clean|>
+  filter(year=='2010')|>
+  group_by(locationabbr)|>
+  summarize(n_days=n_distinct(locationdesc))|>
+  filter(n_days>6)|>
+  knitr::kable()
+```
+
+| locationabbr | n_days |
+|:-------------|-------:|
+| CA           |     12 |
+| CO           |      7 |
+| FL           |     41 |
+| MA           |      9 |
+| MD           |     12 |
+| NC           |     12 |
+| NE           |     10 |
+| NJ           |     19 |
+| NY           |      9 |
+| OH           |      8 |
+| PA           |      7 |
+| SC           |      7 |
+| TX           |     16 |
+| WA           |     10 |
+
+In 2002, there are 6 states which were observed at 7 or more locations.
+In 2010, there are 14 states which were observed at 7 or more locations
