--- a/p8105_hw3_mc5503.Rmd
+++ b/p8105_hw3_mc5503.Rmd
@@ -87,7 +87,127 @@ instacart|>
 Use `group_by` and `summarize` to calculate the mean hour of the day for each day in one week. In average, the mean hour of the day of Coffee Ice Cream is longer.
 
 # Problem 2
+## data cleaning
 ```{r}
 data("brfss_smart2010")
+
+ps_clean=
+  brfss_smart2010|>
+  janitor::clean_names()|>
+  filter(topic=='Overall Health')|>
+  filter(response %in% c("Excellent","Very good","Good","Fair","Poor"))|>
+  mutate(response= forcats::fct_relevel(response, c("Poor", "Fair", "Good","Very good","Excellent")))|>
+  rename("state"="locationabbr","location"="locationdesc")
+```
+
+## states observed at 7 or more locations
+```{r}
+ps_clean|>
+  filter(year=='2002')|>
+  group_by(state)|>
+  summarize(n_days=n_distinct(location))|>
+  filter(n_days>6)|>
+  knitr::kable()
+
+ps_clean|>
+  filter(year=='2010')|>
+  group_by(state)|>
+  summarize(n_days=n_distinct(location))|>
+  filter(n_days>6)|>
+  knitr::kable()
+```
+
+In 2002, there are `r nrow(ps_clean|>filter(year=='2002')|>group_by(state)|>summarize(n_days=n_distinct(location))|>filter(n_days>6))` states which were observed at 7 or more locations. In 2010, there are `r nrow(ps_clean|>filter(year=='2010')|>group_by(state)|>summarize(n_days=n_distinct(location))|>filter(n_days>6))` states which were observed at 7 or more locations.
+
+## plot for average data value
+```{r}
+data_spaghetti=ps_clean|>
+  filter(response=="Excellent")|>
+  select(year,state,location,data_value)|>
+  group_by(year,state)|>
+  summarize(
+    avg_value=mean(data_value)
+  )
+
+data_spaghetti|>
+  ggplot(aes(x=year,y=avg_value,group=state))+
+  geom_line(aes(color=state))+
+  labs(y="average value")
+```
+
+The average values for different states from 2002 to 2010 is between 10 and 30.
+
+## two-panel plot
+```{r}
+ps_clean|>
+  filter(year %in% c("2006","2010"),state=="NY")|>
+  select(year,state,location,response,data_value)|>
+  ggplot(aes(x=response,y=data_value,color=response))+
+  geom_boxplot()+
+  facet_grid(.~year)
+```
+
+From the plot, we can see that both in 2006 and 2010, most responses were good and very good. The data value for answer of good, very good, excellent all increased from 2006 to 2010.
+
+
+# Problem 3
+## data manipulation
+```{r}
+demo_data=read_csv("data/nhanes_covar.csv",skip=4)
+acce_data=read_csv("data/nhanes_accel.csv")
+
+data_clean=demo_data|>
+  filter(age>=21)|>
+  drop_na()|>
+  mutate(sex=recode(sex,"1"="male","2"="female"))|>
+  mutate(education=recode(education,"1"="Less than high school","2"="High school equivalent","3"="More than high school"))|>
+  mutate(education= forcats::fct_relevel(education, c("Less than high school", "High school equivalent", "More than high school")))|>
+  left_join(acce_data,by="SEQN")
+```
+
+## analysis for demographic data
+```{r}
+data_clean|>
+  group_by(sex,education)|>
+  summarize(n_people=n())|>
+  pivot_wider(
+    names_from = education,
+    values_from = n_people
+  )|>
+  knitr::kable()
+
+
+data_clean|>
+  ggplot(aes(x=education,y=age,color=education))+
+  geom_boxplot()+
+  facet_grid(.~sex)
+```
+There are total `r data_clean|>filter(sex=="male")` male and `r data_clean|>filter(sex=="female")` female in the study. From the plot, it's obvious that the younger people tend to have higher education.
+
+## total activities plot
+```{r}
+data_clean|>
+   mutate(total_act = rowSums(across(min1:min1440)))|>
+  ggplot(aes(x=age,y=total_act,color=sex))+
+  geom_point(alpha=0.5)+
+  geom_smooth(se=FALSE)+
+  labs(y="total activity")+
+  facet_grid(.~education)
+```
+From the plot, the total activity decrease with age in general.In group of less than high school, the total activity of male is higher than female, while in other two groups the results are opposite. 
+
+## activity over the course of the day
+```{r}
+data_clean|>
+  pivot_longer(
+    min1:min1440,
+    names_to = "time",
+    values_to = "activity"
+  )|>
+  ggplot(aes(x=time,y=activity,color=sex))+
+  geom_point(alpha=0.5)+
+  geom_smooth(se=FALSE)+
+  facet_grid(.~education)
+    
 ```
 
