--- a/p8105_hw3_mc5503.md
+++ b/p8105_hw3_mc5503.md
@@ -194,7 +194,8 @@ ps_clean=
   janitor::clean_names()|>
   filter(topic=='Overall Health')|>
   filter(response %in% c("Excellent","Very good","Good","Fair","Poor"))|>
-  mutate(response= forcats::fct_relevel(response, c("Poor", "Fair", "Good","Very good","Excellent")))
+  mutate(response= forcats::fct_relevel(response, c("Poor", "Fair", "Good","Very good","Excellent")))|>
+  rename("state"="locationabbr","location"="locationdesc")
 ```
 
 ## states observed at 7 or more locations
@@ -202,46 +203,212 @@ ps_clean=
 ``` r
 ps_clean|>
   filter(year=='2002')|>
-  group_by(locationabbr)|>
-  summarize(n_days=n_distinct(locationdesc))|>
+  group_by(state)|>
+  summarize(n_days=n_distinct(location))|>
   filter(n_days>6)|>
   knitr::kable()
 ```
 
-| locationabbr | n_days |
-|:-------------|-------:|
-| CT           |      7 |
-| FL           |      7 |
-| MA           |      8 |
-| NC           |      7 |
-| NJ           |      8 |
-| PA           |     10 |
+| state | n_days |
+|:------|-------:|
+| CT    |      7 |
+| FL    |      7 |
+| MA    |      8 |
+| NC    |      7 |
+| NJ    |      8 |
+| PA    |     10 |
 
 ``` r
 ps_clean|>
   filter(year=='2010')|>
-  group_by(locationabbr)|>
-  summarize(n_days=n_distinct(locationdesc))|>
+  group_by(state)|>
+  summarize(n_days=n_distinct(location))|>
   filter(n_days>6)|>
   knitr::kable()
 ```
 
-| locationabbr | n_days |
-|:-------------|-------:|
-| CA           |     12 |
-| CO           |      7 |
-| FL           |     41 |
-| MA           |      9 |
-| MD           |     12 |
-| NC           |     12 |
-| NE           |     10 |
-| NJ           |     19 |
-| NY           |      9 |
-| OH           |      8 |
-| PA           |      7 |
-| SC           |      7 |
-| TX           |     16 |
-| WA           |     10 |
+| state | n_days |
+|:------|-------:|
+| CA    |     12 |
+| CO    |      7 |
+| FL    |     41 |
+| MA    |      9 |
+| MD    |     12 |
+| NC    |     12 |
+| NE    |     10 |
+| NJ    |     19 |
+| NY    |      9 |
+| OH    |      8 |
+| PA    |      7 |
+| SC    |      7 |
+| TX    |     16 |
+| WA    |     10 |
 
 In 2002, there are 6 states which were observed at 7 or more locations.
-In 2010, there are 14 states which were observed at 7 or more locations
+In 2010, there are 14 states which were observed at 7 or more locations.
+
+## plot for average data value
+
+``` r
+data_spaghetti=ps_clean|>
+  filter(response=="Excellent")|>
+  select(year,state,location,data_value)|>
+  group_by(year,state)|>
+  summarize(
+    avg_value=mean(data_value)
+  )
+```
+
+    ## `summarise()` has grouped output by 'year'. You can override using the
+    ## `.groups` argument.
+
+``` r
+data_spaghetti|>
+  ggplot(aes(x=year,y=avg_value,group=state))+
+  geom_line(aes(color=state))+
+  labs(y="average value")
+```
+
+    ## Warning: Removed 3 rows containing missing values (`geom_line()`).
+
+![](p8105_hw3_mc5503_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+
+The average values for different states from 2002 to 2010 is between 10
+and 30.
+
+## two-panel plot
+
+``` r
+ps_clean|>
+  filter(year %in% c("2006","2010"),state=="NY")|>
+  select(year,state,location,response,data_value)|>
+  ggplot(aes(x=response,y=data_value,color=response))+
+  geom_boxplot()+
+  facet_grid(.~year)
+```
+
+![](p8105_hw3_mc5503_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+
+From the plot, we can see that both in 2006 and 2010, most responses
+were good and very good. The data value for answer of good, very good,
+excellent all increased from 2006 to 2010.
+
+# Problem 3
+
+## data manipulation
+
+``` r
+demo_data=read_csv("data/nhanes_covar.csv",skip=4)
+```
+
+    ## Rows: 250 Columns: 5
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (5): SEQN, sex, age, BMI, education
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+acce_data=read_csv("data/nhanes_accel.csv")
+```
+
+    ## Rows: 250 Columns: 1441
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (1441): SEQN, min1, min2, min3, min4, min5, min6, min7, min8, min9, min1...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+data_clean=demo_data|>
+  filter(age>=21)|>
+  drop_na()|>
+  mutate(sex=recode(sex,"1"="male","2"="female"))|>
+  mutate(education=recode(education,"1"="Less than high school","2"="High school equivalent","3"="More than high school"))|>
+  mutate(education= forcats::fct_relevel(education, c("Less than high school", "High school equivalent", "More than high school")))|>
+  left_join(acce_data,by="SEQN")
+```
+
+## analysis for demographic data
+
+``` r
+data_clean|>
+  group_by(sex,education)|>
+  summarize(n_people=n())|>
+  pivot_wider(
+    names_from = education,
+    values_from = n_people
+  )|>
+  knitr::kable()
+```
+
+    ## `summarise()` has grouped output by 'sex'. You can override using the `.groups`
+    ## argument.
+
+| sex    | Less than high school | High school equivalent | More than high school |
+|:-------|----------------------:|-----------------------:|----------------------:|
+| female |                    28 |                     23 |                    59 |
+| male   |                    27 |                     35 |                    56 |
+
+``` r
+data_clean|>
+  ggplot(aes(x=education,y=age,color=education))+
+  geom_boxplot()+
+  facet_grid(.~sex)
+```
+
+![](p8105_hw3_mc5503_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+
+There are total 118 male and 110 female in the study. From the plot,
+it’s obvious that the younger people tend to have higher education.
+
+## total activities plot
+
+``` r
+data_clean|>
+   mutate(total_act = rowSums(across(min1:min1440)))|>
+  ggplot(aes(x=age,y=total_act,color=sex))+
+  geom_point(alpha=0.5)+
+  geom_smooth(se=FALSE)+
+  labs(y="total activity")+
+  facet_grid(.~education)
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
+
+![](p8105_hw3_mc5503_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+From the plot, the total activity decrease with age in general.In group
+of less than high school, the total activity of male is higher than
+female, while in other two groups the results are opposite.
+
+## activity over the course of the day
+
+``` r
+data_clean|>
+  pivot_longer(
+    min1:min1440,
+    names_to = "time",
+    values_to = "activity"
+  )|>
+  separate(time,into = c("unit","minute"),sep = 3)|>
+  mutate(minute=as.numeric(minute))|>
+  ggplot(aes(x=minute,y=activity,color=sex))+
+  geom_point(alpha=0.1,size=0.1)+
+  geom_smooth(se=FALSE)+
+  scale_x_continuous(
+    breaks = c(0, 480, 960,1440), 
+    #labels = c("-15ºC", "0", "15"),
+    limits = c(0,1440))+
+  facet_grid(.~education)
+```
+
+    ## `geom_smooth()` using method = 'gam' and formula = 'y ~ s(x, bs = "cs")'
+
+![](p8105_hw3_mc5503_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
+
+From the plot, we can tell that in group of High school equivalent and
+More than high school, female have more activity than male. And people
+have more activity when it’s 8am to 8 pm which is between 480 to 1200
+minutes.
